--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -11,7 +11,15 @@
    </nav>
 </div>
 <div class="section2">
-    <div class="subsection"><h3>Login</h3></div>
+    <div class="subsection">
+        <div class="destinationbar">
+            <img src="/static/Assets/search-512.webp" width="30" height="30">
+            <div class="destinationinput">
+                <h3>Destination</h3>
+                <input type="text" placeholder="Where to go?"/>
+            </div>
+         </div>
+    </div>
     <div class="subsection"><h3>Login</h3></div>
     <div class="subsection"><h3>Login</h3></div>
 </div>
