--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -20,7 +20,10 @@
             </div>
          </div>
     </div>
-    <div class="subsection"><h3>Login</h3></div>
+    <div class="subsection">
+            <input type="date"/>
+            <input type="date"/>
+    </div>
     <div class="subsection"><h3>Login</h3></div>
 </div>
 </header>
