--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,9 +76,23 @@ nav h3
   margin-top: -5px;
   font-size: 16px;
 }
-.destinationinput input
+.subsection:nth-child(2)
+{
+  display: flex;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
+}
+ .destinationinput input
 {
   margin-top: -10px;
   border: none;
   outline: none;
+}
+.subsection input
+{
+  width:40%;
+  height: 80%;
+  border: none;
+  border-radius:10px;
 }
