--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -21,8 +21,8 @@
          </div>
     </div>
     <div class="subsection">
-            <input type="date"/>
-            <input type="date"/>
+            <input type="date" value="{datetime.date.today().isoformat()}"/>
+            <input type="date" value="{datetime.date.today().isoformat()}"/>
     </div>
     <div class="subsection"><h3>Login</h3></div>
 </div>
