--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -21,8 +21,16 @@
          </div>
     </div>
     <div class="subsection">
+        <div class="datasection">   
+            <label>Check In</label>         
             <input type="date" value="{datetime.date.today().isoformat()}"/>
-            <input type="date" value="{datetime.date.today().isoformat()}"/>
+        </div>
+
+    <div class="datasection">
+        <label>Check Out</label>
+          <input type="date" value="{datetime.date.today().isoformat()}"/>
+    </div>
+
     </div>
     <div class="subsection"><h3>Login</h3></div>
 </div>
