--- a/static/css/index.css
+++ b/static/css/index.css
@@ -91,8 +91,22 @@ nav h3
 }
 .subsection input
 {
-  width:40%;
+  width:80%;
   height: 80%;
   border: none;
   border-radius:10px;
+}
+.datasection
+{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  height: 80%;
+}
+.datasection label
+{
+  margin-left: 5px;
+  color: rgba(0, 0, 0, 0.622);
 }
