--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -32,6 +32,14 @@
     </div>
 
     </div>
-    <div class="subsection"><h3>Login</h3></div>
+    <div class="subsection">
+        <div class="roomsection">   
+            <label>Rooms</label>         
+            <input type="text" placeholder="2"/>
+        </div>
+        <div class="roomsection">   
+           <button>Search</button>
+        </div>
+    </div>
 </div>
 </header>
