--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -11,6 +11,11 @@
    </nav>
 </div>
 <div class="section2">
+    <div class="sectiontwotext">
+       <h3>We compare hotel prices from 100s of sites</h3>
+       <h4>We’ll do the searching. You do the saving.</h4>
+    </div>
+  <div class="searchbars">
     <div class="subsection">
         <div class="destinationbar">
             <img src="/static/Assets/search-512.webp" width="30" height="30">
@@ -41,5 +46,6 @@
            <button>Search</button>
         </div>
     </div>
+</div>
 </div>
 </header>
