--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,8 @@ header
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height:200px;
+  height:300px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
 .logo
@@ -36,6 +37,37 @@ nav h3
   width: 100%;
 }
 .section2
+{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+}
+.section2 .sectiontwotext
+{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  color: black;
+  width: 60%;
+  font-size: 20px;
+  height: 40%;
+  margin-bottom: 0px;
+}
+.sectiontwotext h3,h4
+{
+  margin: 0px;
+}
+.sectiontwotext h4
+{
+  margin-top: 5px;
+  font-size: 17px;
+  font-weight: 500;
+}
+.section2 .searchbars
 {
   display: flex;
   justify-content: center;
@@ -142,4 +174,8 @@ nav h3
 input::placeholder
 {
   font-weight: 800;
+}
+.sectiontwotext
+{
+  
 }
