--- a/static/css/index.css
+++ b/static/css/index.css
@@ -175,7 +175,18 @@ input::placeholder
 {
   font-weight: 800;
 }
-.sectiontwotext
+.backgroundsection
 {
-  
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.backgroundsection img
+{
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border: 1px solid rgba(0, 0, 0, 0.222);
+   box-shadow:0px 20px 10px white;
 }
