--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
 <body>
     {% include 'Components/header.html' %}
     <main>
-
+       <div class="backgroundsection">
+           <img src="../static/Assets/background.webp"/>
+       </div>
     </main>
     {% include 'Components/Footer.html' %}
 </body>
