--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,20 @@
        <div class="backgroundsection">
            <img src="../static/Assets/background.webp"/>
        </div>
+       <div>
+          <h2>Take a dip at these top-rated hotels</h2>
+          <div class="hotelpanel">
+             <div class="hotelsubpanel">
+
+             </div>
+             <div class="hotelsubpanel">
+                
+             </div>
+             <div class="hotelsubpanel">
+                
+             </div>
+          </div>
+       </div>
     </main>
     {% include 'Components/Footer.html' %}
 </body>
