--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,12 @@
           <h2>Take a dip at these top-rated hotels</h2>
           <div class="hotelpanel">
              <div class="hotelsubpanel">
+                <div class="hotelimage">
 
+                </div>
+                <div class="hotelimage">
+
+                </div>
              </div>
              <div class="hotelsubpanel">
                 
