--- a/templates/index.html
+++ b/templates/index.html
@@ -17,17 +17,30 @@
           <div class="hotelpanel">
              <div class="hotelsubpanel">
                 <div class="hotelimage">
-
+                   <img src=""/>
                 </div>
+                <div class="textarea">
+                    <h2>Barcelona</h2>
+                    <button>Check Prices</button>
+                </div>
+             </div>
+             <div class="hotelsubpanel">
                 <div class="hotelimage">
-
+                    <img src=""/>
+                </div>
+                <div class="textarea">
+                    <h2>Alomar</h2>
+                    <button>Check Prices</button>
                 </div>
              </div>
              <div class="hotelsubpanel">
-                
-             </div>
-             <div class="hotelsubpanel">
-                
+                <div class="hotelimage">
+                    <img src=""/>
+                </div>
+                <div class="textarea">
+                    <h2>Valentine Cabillers</h2>
+                    <button>Check Prices</button>
+                </div>
              </div>
           </div>
        </div>
