--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
        <div class="backgroundsection">
            <img src="../static/Assets/background.webp"/>
        </div>
-       <div>
+       <div class="hotelsection">
           <h2>Take a dip at these top-rated hotels</h2>
           <div class="hotelpanel">
              <div class="hotelsubpanel">
