--- a/templates/index.html
+++ b/templates/index.html
@@ -17,28 +17,31 @@
           <div class="hotelpanel">
              <div class="hotelsubpanel">
                 <div class="hotelimage">
-                   <img src=""/>
+                   <img src="../static/Assets/panel1image1.avif"/>
                 </div>
                 <div class="textarea">
                     <h2>Barcelona</h2>
+                    <h3>Pool && Spa</h3>
                     <button>Check Prices</button>
                 </div>
              </div>
              <div class="hotelsubpanel">
                 <div class="hotelimage">
-                    <img src=""/>
+                    <img src="../static/Assets/panel1image2.avif"/>
                 </div>
                 <div class="textarea">
                     <h2>Alomar</h2>
+                    <h3>Pool && Spa</h3>
                     <button>Check Prices</button>
                 </div>
              </div>
              <div class="hotelsubpanel">
                 <div class="hotelimage">
-                    <img src=""/>
+                    <img src="../static/Assets/panel1image3.avif"/>
                 </div>
                 <div class="textarea">
                     <h2>Valentine Cabillers</h2>
+                    <h3>Pool && Spa</h3>
                     <button>Check Prices</button>
                 </div>
              </div>
