--- a/static/css/index.css
+++ b/static/css/index.css
@@ -198,17 +198,49 @@ input::placeholder
 
   height: auto;
 }
-.hotelpanel .hotelsubpanel
-{
-  width:24vw;
-  height: 60vh;
-  background-color: red;
-  border-radius: 8px;
-}
 .hotelsection
 {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.hotelpanel .hotelsubpanel
+{
+  width:24vw;
+  height: 70vh;
+  border-radius: 8px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  border:1px solid rgba(0, 0, 0, 0.121);
+}
+.hotelimage
+{
+  width: 100%;
+}
+.hotelimage img
+{
+  width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+
+}
+ .textarea
+{
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height:100%;
+}
+.textarea button
+{
+  width: 80%;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
 }
