--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,8 @@
+body
+{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
 header
 {
   display: flex;
@@ -204,6 +209,12 @@ input::placeholder
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 30px;
+}
+.hotelsection h1
+{
+  margin-left: -800px;
+  font-size: 27px;
 }
 .hotelpanel .hotelsubpanel
 {
@@ -243,4 +254,6 @@ input::placeholder
   border: none;
   border-radius: 5px;
   font-weight: 600;
+  background-color:  rgb(23, 127, 239);
+  color:white;
 }
