--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,31 @@
              </div>
           </div>
        </div>
+       <div class="hotelsection">
+        <h1>Take a dip at these top-rated hotels</h1>
+        <div class="hotelpanel">
+           <div class="hotelsubpanel2">
+              <div class="hotelimage">
+                 <img src="../static/Assets/panel1image1.avif"/>
+              </div>
+           </div>
+           <div class="hotelsubpanel2">
+              <div class="hotelimage">
+                  <img src="../static/Assets/panel1image2.avif"/>
+              </div>
+           </div>
+           <div class="hotelsubpanel2">
+              <div class="hotelimage">
+                  <img src="../static/Assets/panel1image3.avif"/>
+              </div>
+           </div>
+           <div class="hotelsubpanel2">
+            <div class="hotelimage">
+                <img src="../static/Assets/panel1image3.avif"/>
+            </div>
+         </div>
+        </div>
+     </div>
     </main>
     {% include 'Components/Footer.html' %}
 </body>
