--- a/templates/index.html
+++ b/templates/index.html
@@ -48,26 +48,26 @@
           </div>
        </div>
        <div class="hotelsection">
-        <h1>Take a dip at these top-rated hotels</h1>
+        <h1>Famous Searches</h1>
         <div class="hotelpanel">
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                 <img src="../static/Assets/panel1image1.avif"/>
+                 <img src="../static/Assets/panel2img1.avif"/>
               </div>
            </div>
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                  <img src="../static/Assets/panel1image2.avif"/>
+                  <img src="../static/Assets/panel2img2.avif"/>
               </div>
            </div>
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                  <img src="../static/Assets/panel1image3.avif"/>
+                  <img src="../static/Assets/panel2img3.avif"/>
               </div>
            </div>
            <div class="hotelsubpanel2">
             <div class="hotelimage">
-                <img src="../static/Assets/panel1image3.avif"/>
+                <img src="../static/Assets/panel2img4.avif"/>
             </div>
          </div>
         </div>
