--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
            <div class="hotelsubpanel2">
               <div class="hotelimage">
                   <img src="../static/Assets/panel2img3.avif"/>
+                  <h3>Sand</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
