--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,13 @@
            <div class="hotelsubpanel2">
               <div class="hotelimage">
                  <img src="../static/Assets/panel2img1.avif"/>
+                 <h3>Cork</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
               <div class="hotelimage">
                   <img src="../static/Assets/panel2img2.avif"/>
+                  <h3>New york</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
@@ -69,6 +71,7 @@
            <div class="hotelsubpanel2">
             <div class="hotelimage">
                 <img src="../static/Assets/panel2img4.avif"/>
+                <h3>San fransisco</h3>
             </div>
          </div>
         </div>
