--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -6,7 +6,7 @@
    <nav>
        <h3>Recently Viewed</h3>
        <h3>Favourites</h3>
-       <h3>Login</h3>
+       <h3><a href="/login">Login</a></h3>
        <div class="menu"><h3>Menu</h3></div>
    </nav>
 </div>
