--- a/templates/login.html
+++ b/templates/login.html
@@ -6,77 +6,15 @@
     <title>Hotel Booking</title>
     <link rel="stylesheet" href="static/css/index.css"/>
 </head>
+<style>
+   
+</style>
 <body>
-    {% include 'Components/header.html' %}
     <main>
-       <div class="backgroundsection">
-           <img src="../static/Assets/background.webp"/>
+       <img src=""/>
+       <div class="loginpanel">
+
        </div>
-       <div class="hotelsection">
-          <h1>Take a dip at these top-rated hotels</h1>
-          <div class="hotelpanel">
-             <div class="hotelsubpanel">
-                <div class="hotelimage">
-                   <img src="../static/Assets/panel1image1.avif"/>
-                </div>
-                <div class="textarea">
-                    <h2>Barcelona</h2>
-                    <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
-                </div>
-             </div>
-             <div class="hotelsubpanel">
-                <div class="hotelimage">
-                    <img src="../static/Assets/panel1image2.avif"/>
-                </div>
-                <div class="textarea">
-                    <h2>Alomar</h2>
-                    <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
-                </div>
-             </div>
-             <div class="hotelsubpanel">
-                <div class="hotelimage">
-                    <img src="../static/Assets/panel1image3.avif"/>
-                </div>
-                <div class="textarea">
-                    <h2>Valentine Cabillers</h2>
-                    <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
-                </div>
-             </div>
-          </div>
-       </div>
-       <div class="hotelsection">
-        <h1>Famous Searches</h1>
-        <div class="hotelpanel">
-           <div class="hotelsubpanel2">
-              <div class="hotelimage">
-                 <img src="../static/Assets/panel2img1.avif"/>
-                 <h3>Cork</h3>
-              </div>
-           </div>
-           <div class="hotelsubpanel2">
-              <div class="hotelimage">
-                  <img src="../static/Assets/panel2img2.avif"/>
-                  <h3>New york</h3>
-              </div>
-           </div>
-           <div class="hotelsubpanel2">
-              <div class="hotelimage">
-                  <img src="../static/Assets/panel2img3.avif"/>
-                  <h3>Sand</h3>
-              </div>
-           </div>
-           <div class="hotelsubpanel2">
-            <div class="hotelimage">
-                <img src="../static/Assets/panel2img4.avif"/>
-                <h3>San fransisco</h3>
-            </div>
-         </div>
-        </div>
-     </div>
     </main>
-    {% include 'Components/Footer.html' %}
 </body>
 </html>
