--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,31 @@
     <link rel="stylesheet" href="static/css/index.css"/>
 </head>
 <style>
-   
+main{
+   width: 90%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+}
+.emailbox
+{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
 </style>
 <body>
     <main>
-       <img src=""/>
+       <img src="static/Assets/loginbackground.avif"/>
        <div class="loginpanel">
-
+         <h2>Hotel Booking Adventure</h2>
+         <h2>Hotel Booking Adventure</h2>
+         <div class="emailbox">
+            <label>Log in or create account with your email</label>
+            <input type="text" placeholder="Email"/>
+         </div>
        </div>
     </main>
 </body>
