--- a/templates/register.html
+++ b/templates/register.html
@@ -57,10 +57,12 @@ button
          <h2>Unlock more savings as a member</h2>
          <div class="emailbox">
             <label>Log in or create account with your email</label>
+            <input type="text" placeholder="name"/>
             <input type="text" placeholder="Email"/>
             <input type="text" placeholder="Password"/>
-            <button>Login</button>
+            <input type="text" placeholder="Confirm Password"/>     
             <button><a href="/register">Register</a></button>
+            <button><a href="/login">Login</a></button>
          </div>
        </div>
     </main>
