--- a/templates/login.html
+++ b/templates/login.html
@@ -47,6 +47,11 @@ button
    border: none;
    border: 1px solid rgba(0, 0, 0, 0.418);
    margin-bottom: 10px;
+
+}
+button a
+{
+   text-decoration: none;
 }
 </style>
 <body>
