--- a/templates/login.html
+++ b/templates/login.html
@@ -49,16 +49,24 @@ button
    margin-bottom: 10px;
 
 }
+.loginpanel h2 a
+{
+   text-decoration: none;
+   color: black;
+}
 button a
 {
    text-decoration: none;
+   font-weight: 600;
+   color: white;
 }
+
 </style>
 <body>
     <main>
        <img src="static/Assets/loginbackground.avif"/>
        <div class="loginpanel">
-         <h2>Hotel Booking Adventure</h2>
+         <h2><a href="/">Hotel Booking Adventure</a></h2>
          <h2>Unlock more savings as a member</h2>
          <div class="emailbox">
             <label>Log in or create account with your email</label>
