--- a/templates/register.html
+++ b/templates/register.html
@@ -52,13 +52,20 @@ button
 button a
 {
    text-decoration: none;
+   font-weight: 600;
+   color: white;
 }
+.loginpanel h2 a
+{
+   text-decoration: none;
+   color: black;
+} 
 </style>
 <body>
     <main>
        <img src="static/Assets/loginbackground.avif"/>
        <div class="loginpanel">
-         <h2>Hotel Booking Adventure</h2>
+         <h2><a href="/">Hotel Booking Adventure</a></h2>
          <h2>Unlock more savings as a member</h2>
          <div class="emailbox">
             <label>Log in or create account with your email</label>
