--- a/templates/Components/Footer.html
+++ b/templates/Components/Footer.html
@@ -1,3 +1,23 @@
 <footer>
-
+   <div class="section1">
+      <h3>Company</h3>
+      <h3>Policy</h3>
+      <h3>Terms & Conditions</h3>
+      <h3>Hotel Booking</h3>
+      <h3>Business</h3>
+   </div>
+   <div class="section2">
+    <h3>Company</h3>
+    <h3>Policy</h3>
+    <h3>Terms & Conditions</h3>
+    <h3>Hotel Booking</h3>
+    <h3>Business</h3>
+   </div>
+   <div class="section3">
+    <h3>Company</h3>
+    <h3>Policy</h3>
+    <h3>Terms & Conditions</h3>
+    <h3>Hotel Booking</h3>
+    <h3>Business</h3>
+   </div>
 </footer>
