--- a/templates/Components/Footer.html
+++ b/templates/Components/Footer.html
@@ -1,4 +1,5 @@
 <footer>
+    <div class="footersection">
    <div class="section1">
       <h3>Company</h3>
       <h3>Policy</h3>
@@ -7,17 +8,15 @@
       <h3>Business</h3>
    </div>
    <div class="section2">
-    <h3>Company</h3>
-    <h3>Policy</h3>
-    <h3>Terms & Conditions</h3>
-    <h3>Hotel Booking</h3>
-    <h3>Business</h3>
+    <h3>Login</h3>
+    <h3>Register</h3>
+    <h3>Legacy</h3>
+    <h3>Terms</h3>
+    <h3>Health Insurance</h3>
    </div>
    <div class="section3">
-    <h3>Company</h3>
-    <h3>Policy</h3>
-    <h3>Terms & Conditions</h3>
-    <h3>Hotel Booking</h3>
-    <h3>Business</h3>
+    <h2>Get exclusive inspiration for your next stay – subscribe to our newsletter.</h2>
+    <input type="text" placeholder="Email"/>
    </div>
+</div>
 </footer>
