--- a/static/css/index.css
+++ b/static/css/index.css
@@ -296,8 +296,13 @@ footer
   margin-top: 200px;
   color: white;
 }
+footer .footersection
+{
+  width: 60%;
+  display: flex;
+}
 /* Footer section */
-footer .section1, .section2, .section3
+.footersection .section1, .section2, .section3
 {
 display: flex;
 justify-content: center;
