--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -10,7 +10,7 @@
        <div class="menu"><h3>Menu</h3></div>
    </nav>
 </div>
-<div class="section2">
+<div class="sectiontwo">
     <div class="sectiontwotext">
        <h3>We compare hotel prices from 100s of sites</h3>
        <h4>We’ll do the searching. You do the saving.</h4>
