--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+     {% include('Components/header.html')%}
+       <main>
+        
+       </main>
+     {% include('Components/footer.html')%}
 </body>
 </html>
