--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -5,7 +5,7 @@
     </div>
    <nav>
        <h3>Recently Viewed</h3>
-       <h3>Favourites</h3>
+       <h3><a href="/favourites">Favourites</a></h3>
        <h3><a href="/login">Login</a></h3>
        <div class="menu"><h3>Menu</h3></div>
    </nav>
