--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favourites</title>
+    <link rel="stylesheet" href="static/css/index.css"/>
 </head>
 <body>
      {% include('Components/header.html')%}
        <main>
-        
+
        </main>
      {% include('Components/footer.html')%}
 </body>
