--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -9,7 +9,13 @@
 <body>
      {% include('Components/header.html')%}
        <main>
-
+          <div class="favouritesection">
+            <h2>Your favourites</h2>
+            <div class="favouritetour">
+                <img src=""/>
+                <h4>next stay</h4>
+            </div>
+          </div>
        </main>
      {% include('Components/footer.html')%}
 </body>
