--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -33,13 +33,19 @@
         {
             margin-left: 20px;
         }
+        a{
+            color: black;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
      {% include('Components/header.html')%}
        <main>
           <div class="favouritesection">
+            <h3><a href="/">back</a></h3>
             <h2>Your favourites</h2>
+ 
             <div class="favouritetour">
                 <img src=""/>
                 <h4>next stay</h4>
