--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -9,7 +9,11 @@
 <body>
     {% include 'Components/header.html' %}
     <main>
-
+     <div class="sectiondestination">
+        <img src=""/>
+         <div class="textsection1"></div>
+         <div class="textsection2"></div>
+     </div>
     </main>
     {% include 'Components/Footer.html' %}
 </body>
