--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -10,9 +10,15 @@
     {% include 'Components/header.html' %}
     <main>
      <div class="sectiondestination">
-        <img src=""/>
-         <div class="textsection1"></div>
-         <div class="textsection2"></div>
+        <img src="panel1image1.avif"/>
+         <div class="textsection1">
+            <h1>Hotel Valencia</h1>
+            <h3>Modern Location</h3>
+         </div>
+         <div class="textsection2">
+            <h1>Price</h1>
+            <button>View Deal</button>
+         </div>
      </div>
     </main>
     {% include 'Components/Footer.html' %}
