--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -12,7 +12,7 @@
      <div class="sectiondestination">
         <img src="panel1image1.avif"/>
          <div class="textsection1">
-            <h1>Hotel Valencia</h1>
+            <h1>Barcelona</h1>
             <h3>Modern Location</h3>
          </div>
          <div class="textsection2">
