--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -6,6 +6,32 @@
     <title>Hotel Booking</title>
     <link rel="stylesheet" href="static/css/index.css"/>
 </head>
+<style>
+    /*Destination  */
+.sectiondestination
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 70%;
+  border: 1px solid black;
+  border-radius: 5px;
+ height: 300px;
+
+}
+main
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  background-color: beige;
+  min-height: 80vh;
+  height: 100%;
+}
+</style>
 <body>
     {% include 'Components/header.html' %}
     <main>
