--- a/static/css/index.css
+++ b/static/css/index.css
@@ -313,3 +313,18 @@ margin-left: 80px;
 width: 30%;
 font-size: 12px;
 }
+
+/*Destination  */
+.sectiondestination
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 70%;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: beige;
+  min-height: 80vh;
+  height: 100%;
+}
