--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -13,11 +13,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   width: 70%;
   border: 1px solid black;
   border-radius: 5px;
- height: 300px;
+ height: 200px;
 
 }
 main
@@ -36,7 +35,7 @@ main
     {% include 'Components/header.html' %}
     <main>
      <div class="sectiondestination">
-        <img src="panel1image1.avif"/>
+        <img src="static/Assets/panel1image1.avif"/>
          <div class="textsection1">
             <h1>Barcelona</h1>
             <h3>Modern Location</h3>
