--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -11,24 +11,49 @@
 .sectiondestination
 {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  width: 70%;
+  width: 50%;
   border: 1px solid black;
   border-radius: 5px;
  height: 200px;
+ background-color: white;
+ margin-top: 20px;
 
+}
+.sectiondestination img
+{
+    width: 30%;
+    height: 100%;
 }
 main
 {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   width: 100%;
   background-color: beige;
   min-height: 80vh;
   height: 100%;
+}
+.textsection1
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 100%;
+}
+.textsection2
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 100%;
 }
 </style>
 <body>
@@ -39,10 +64,12 @@ main
          <div class="textsection1">
             <h1>Barcelona</h1>
             <h3>Modern Location</h3>
+            <h3>Valencia City</h3>
          </div>
          <div class="textsection2">
             <h1>Price</h1>
             <button>View Deal</button>
+            <button>More Prices</button>
          </div>
      </div>
     </main>
