--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -25,6 +25,8 @@
 {
     width: 30%;
     height: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 main
 {
@@ -54,6 +56,17 @@ main
     align-items: center;
     width: 30%;
     height: 100%;
+}
+.textsection2 button
+{
+    width: 100px;
+    height: 40px;
+    background-color: rgb(30, 193, 30);
+    border: none;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    
 }
 </style>
 <body>
