--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -11,7 +11,7 @@
 .sectiondestination
 {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   width: 50%;
   border: 1px solid black;
@@ -56,6 +56,7 @@ main
     align-items: center;
     width: 30%;
     height: 100%;
+    background-color: #F1F8EA;
 }
 .textsection2 button
 {
