--- a/static/css/index.css
+++ b/static/css/index.css
@@ -210,6 +210,7 @@ input::placeholder
   align-items: center;
   flex-direction: column;
   margin-top: 30px;
+  margin-bottom: 100px;
 }
 .hotelsection h1
 {
@@ -293,7 +294,7 @@ footer
   align-items: center;
   width: 100%;
   background-color: rgb(12, 12, 58);
-  margin-top: 200px;
+
   color: white;
 }
 footer .footersection
