--- a/templates/register.html
+++ b/templates/register.html
@@ -69,10 +69,10 @@ button a
          <h2>Unlock more savings as a member</h2>
          <div class="emailbox">
             <label>Log in or create account with your email</label>
-            <input type="text" placeholder="name"/>
-            <input type="text" placeholder="Email"/>
-            <input type="text" placeholder="Password"/>
-            <input type="text" placeholder="Confirm Password"/>     
+            <input type="text" placeholder="name" name="name"/>
+            <input type="email" placeholder="Email" name="email"/>
+            <input type="password" placeholder="Password" name="password"/>
+            <input type="text" placeholder="Confirm Password" name="confirmpassword"/>     
             <button><a href="/register">Register</a></button>
             <button><a href="/login">Login</a></button>
          </div>
