login validation completed

--- a/templates/login.html
+++ b/templates/login.html
@@ -76,6 +76,7 @@ button a
             <button type="submit">Login</button>
             <button><a href="/register">Register</a></button>
          </form>
+         <label style="text-align: center;width: 65%;">{{message}}</label>
          </div>
        </div>
     </main>
