--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -6,7 +6,11 @@
    <nav>
        <h3>Recently Viewed</h3>
        <h3><a href="/favourites">Favourites</a></h3>
+       {% if message  %}
+       <h3><a href="/login">Logout</a></h3>
+       {%  else  %}
        <h3><a href="/login">Login</a></h3>
+       {% endif  %}
        <div class="menu"><h3>Menu</h3></div>
    </nav>
 </div>
