--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                 <div class="textarea">
                     <h2>Barcelona</h2>
                     <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
+                    <button onclick="window.location.href='/destination'">Check Prices</button>
                 </div>
              </div>
              <div class="hotelsubpanel">
@@ -32,7 +32,7 @@
                 <div class="textarea">
                     <h2>Alomar</h2>
                     <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
+                    <button onclick="window.location.href='/destination'">Check Prices</button>
                 </div>
              </div>
              <div class="hotelsubpanel">
@@ -42,7 +42,7 @@
                 <div class="textarea">
                     <h2>Valentine Cabillers</h2>
                     <h3>Pool && Spa</h3>
-                    <button>Check Prices</button>
+                    <button onclick="window.location.href='/destination'">Check Prices</button>
                 </div>
              </div>
           </div>
