--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -19,7 +19,7 @@
  height: 200px;
  background-color: white;
  margin-top: 20px;
-
+margin-bottom: 50px;
 }
 .sectiondestination img
 {
@@ -81,7 +81,33 @@ main
             <h3>Valencia City</h3>
          </div>
          <div class="textsection2">
-            <h1>Price</h1>
+            <h1>$200</h1>
+            <button>View Deal</button>
+            <button>More Prices</button>
+         </div>
+     </div>
+     <div class="sectiondestination">
+        <img src="static/Assets/panel1image1.avif"/>
+         <div class="textsection1">
+            <h1>Alomar</h1>
+            <h3>Modern Location</h3>
+            <h3>Valencia City</h3>
+         </div>
+         <div class="textsection2">
+            <h1>$1200</h1>
+            <button>View Deal</button>
+            <button>More Prices</button>
+         </div>
+     </div>
+     <div class="sectiondestination">
+        <img src="static/Assets/panel1image1.avif"/>
+         <div class="textsection1">
+            <h1>Valentine Cabillers</h1>
+            <h3>Modern Location</h3>
+            <h3>Valencia City</h3>
+         </div>
+         <div class="textsection2">
+            <h1>$800</h1>
             <button>View Deal</button>
             <button>More Prices</button>
          </div>
