--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,12 @@ body
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+*
+{
+  margin: 0;
+  padding:0;
+
+}
 header
 {
   display: flex;
@@ -27,6 +33,7 @@ nav
   justify-content: flex-start;
   align-items: center;
   width: 50%;
+  height: 70px;
 }
 nav h3
 {
@@ -294,7 +301,7 @@ footer
   align-items: center;
   width: 100%;
   background-color: rgb(12, 12, 58);
-
+  margin-top: 0px;
   color: white;
 }
 footer .footersection
