--- a/templates/index.html
+++ b/templates/index.html
@@ -52,25 +52,25 @@
         <div class="hotelpanel">
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                 <img src="../static/Assets/panel2img1.avif"/>
+                 <img src="../static/Assets/panel2img1.avif"  onclick="window.location.href='/famous'"/>
                  <h3>Cork</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                  <img src="../static/Assets/panel2img2.avif"/>
+                  <img src="../static/Assets/panel2img2.avif" onclick="window.location.href='/famous'"/>
                   <h3>New york</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
               <div class="hotelimage">
-                  <img src="../static/Assets/panel2img3.avif"/>
+                  <img src="../static/Assets/panel2img3.avif" onclick="window.location.href='/famous'"/>
                   <h3>Sand</h3>
               </div>
            </div>
            <div class="hotelsubpanel2">
             <div class="hotelimage">
-                <img src="../static/Assets/panel2img4.avif"/>
+                <img src="../static/Assets/panel2img4.avif" onclick="window.location.href='/famous'"/>
                 <h3>San fransisco</h3>
             </div>
          </div>
