--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -71,7 +71,7 @@ main
 }
 </style>
 <body>
-    {% include 'Components/header.html' %}
+    {% include ('Components/header.html',message) %}
     <main>
      <div class="sectiondestination">
         <img src="static/Assets/panel1image1.avif"/>
