--- a/templates/famoussearches.html
+++ b/templates/famoussearches.html
@@ -83,7 +83,7 @@ main
          <div class="textsection2">
             <h1>$200</h1>
             <button>View Deal</button>
-            <button>More Prices</button>
+            <button>Add favourites</button>
          </div>
      </div>
      <div class="sectiondestination">
@@ -96,7 +96,7 @@ main
          <div class="textsection2">
             <h1>$1200</h1>
             <button>View Deal</button>
-            <button>More Prices</button>
+            <button>Add favourites</button>
          </div>
      </div>
      <div class="sectiondestination">
@@ -109,7 +109,7 @@ main
          <div class="textsection2">
             <h1>$1100</h1>
             <button>View Deal</button>
-            <button>More Prices</button>
+            <button>Add favourites</button>
          </div>
      </div>
      <div class="sectiondestination">
@@ -122,7 +122,7 @@ main
          <div class="textsection2">
             <h1>$1800</h1>
             <button>View Deal</button>
-            <button>More Prices</button>
+            <button>Add favourites</button>
          </div>
      </div>
     </main>
