--- a/templates/famoussearches.html
+++ b/templates/famoussearches.html
@@ -73,7 +73,7 @@ main
 <body>
     {% include 'Components/header.html' %}
     <main>
-     <div class="sectiondestination">
+     <div class="sectiondestination" data-title="Cork" data-subtitle="Modern Location" data-city="Valencia City" data-price="$200" data-image="static/Assets/panel2img1.avif">
         <img src="static/Assets/panel2img1.avif"/>
          <div class="textsection1">
             <h1>Cork</h1>
@@ -83,10 +83,10 @@ main
          <div class="textsection2">
             <h1>$200</h1>
             <button>View Deal</button>
-            <button>Add favourites</button>
+            <button onclick="AddFavourites(this)">Add favourites</button>
          </div>
      </div>
-     <div class="sectiondestination">
+     <div class="sectiondestination"  data-title="New york" data-subtitle="Modern Location" data-city="Texas City" data-price="$1200" data-image="static/Assets/panel2img2.avif">
         <img src="static/Assets/panel2img2.avif"/>
          <div class="textsection1">
             <h1>New york</h1>
@@ -96,10 +96,10 @@ main
          <div class="textsection2">
             <h1>$1200</h1>
             <button>View Deal</button>
-            <button>Add favourites</button>
+            <button onclick="AddFavourites(this)">Add favourites</button>
          </div>
      </div>
-     <div class="sectiondestination">
+     <div class="sectiondestination"  data-title="Sand Piers" data-subtitle="Modern Location" data-city="Sand City" data-price="$1100" data-image="static/Assets/panel2img3.avif">
         <img src="static/Assets/panel2img3.avif"/>
          <div class="textsection1">
             <h1>Sand Piers</h1>
@@ -109,10 +109,10 @@ main
          <div class="textsection2">
             <h1>$1100</h1>
             <button>View Deal</button>
-            <button>Add favourites</button>
+            <button onclick="AddFavourites(this)">Add favourites</button>
          </div>
      </div>
-     <div class="sectiondestination">
+     <div class="sectiondestination"  data-title="San fransico" data-subtitle="Modern Location" data-city="Old City" data-price="$1800" data-image="static/Assets/panel2img4.avif">
         <img src="static/Assets/panel2img4.avif"/>
          <div class="textsection1">
             <h1>San fransico</h1>
@@ -122,7 +122,7 @@ main
          <div class="textsection2">
             <h1>$1800</h1>
             <button>View Deal</button>
-            <button>Add favourites</button>
+            <button onclick="AddFavourites(this)">Add favourites</button>
          </div>
      </div>
     </main>
