--- a/templates/destinationpage.html
+++ b/templates/destinationpage.html
@@ -114,5 +114,6 @@ main
      </div>
     </main>
     {% include 'Components/Footer.html' %}
+    <script src="static/js/index.js"></script>
 </body>
 </html>
