--- a/templates/Components/header.html
+++ b/templates/Components/header.html
@@ -7,7 +7,7 @@
        <h3>Recently Viewed</h3>
        <h3><a href="/favourites">Favourites</a></h3>
        {% if message  %}
-       <h3><a href="/login">Logout</a></h3>
+       <h3><a href="/logout">Logout</a></h3>
        {%  else  %}
        <h3><a href="/login">Login</a></h3>
        {% endif  %}
