--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -22,20 +22,30 @@
         {
             border: 1px solid black;
             width: 200px;
-            height: 150px;
+            height: 250px;
             border-radius: 6px;
             display: flex;
             justify-content: center;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
         .favouritetour h4
         {
-            margin-left: 20px;
+            /* margin-left: 20px; */
         }
         a{
             color: black;
             text-decoration: none;
+        }
+        .favoritesubsection
+        {
+            display: flex;
+            width: 100%;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -45,13 +55,26 @@
           <div class="favouritesection">
             <h3><a href="/">back</a></h3>
             <h2>Your favourites</h2>
- 
+            {% if message %}
+            <div class="favoritesubsection">
+           
+            <!-- <div class="favouritetour">
+                <!-- <img src="static/Assets/panel1image1.avif" width="100" height="100"/>
+                <h4>title</h4>
+                <h4>subtitle</h4> -->
+            </div> -->
+            {% else %}
             <div class="favouritetour">
-                <img src=""/>
-                <h4>next stay</h4>
+                <h4>No Favourites yet</h4>
             </div>
+            {% endif %}
+        </div>
+        
+
           </div>
+          
        </main>
      {% include('Components/footer.html')%}
+     <script src="static/js/index.js"></script>
 </body>
 </html>
