--- a/templates/index.html
+++ b/templates/index.html
@@ -78,5 +78,6 @@
      </div>
     </main>
     {% include 'Components/Footer.html' %}
+    <script src="static/js/index.js"></script>
 </body>
 </html>
