--- a/templates/Components/loginpart.html
+++ b/templates/Components/loginpart.html
@@ -4,8 +4,8 @@
   <h2>Unlock more savings as a member</h2>
   <div class="emailbox">
      <label>Log in or create account with your email</label>
-     <input type="text" placeholder="Email"/>
-     <input type="text" placeholder="Password"/>
+     <input type="text" placeholder="Email" style="text-indent: 10px;"/>
+     <input type="text" placeholder="Password" style="text-indent: 10px;"/>
      <button>Login</button>
      <button>Register</button>
   </div>
