--- a/templates/favourites.html
+++ b/templates/favourites.html
@@ -47,6 +47,13 @@
             flex-wrap: wrap;
             margin-bottom: 20px;
         }
+        button
+        {
+            width: 80px;
+            height:25px;
+            border: none;
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
